test implementations complete

--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -7,7 +7,7 @@
     <base href="%PUBLIC_URL%/" />
     <title>InterviewTest</title>
   </head>
-  <body>
+  <body style="background: #1b1c1e;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
